# CameraApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CameraApp.code-workspace  Info.csv  README.md  RemoteCli.cpp  main.cpp  run.py  setup.py  test.py
Cameraremote_SDK/include/: CameraDevice.cpp  CameraDevice.h  IDeviceCallback.h  MessageDefine.h  PropertyValueTable.cpp  PropertyValueTable.h  RemoteCli.cpp  main.cpp  main.h  main2.cpp  run.cpp
Cameraremote_SDK/include/CRSDK/: CrDefines.h  CrDeviceProperty.h
app/: CameraDevice.cpp  CameraDevice.h  PropertyValueTable.h  RemoteCli.cpp
cmake/: enum_cli_hdr.cmake  enum_cli_src.cmake  enum_crsdk_hdr.cmake
